[package]
name = "proxy"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
serde_json = "1.0.102"
signal-hook = "0.3.16"
simplelog = { version = "^0.12.1", features = ["paris"] }
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
tokio = { version = "1.29.1", features = ["full"]}
serde = { version = "1.0.171", features = ["derive"] }
once_cell = "1.18.0"
chrono = "0.4.26"
clap = "4.3.12"
digest = "0.10.7"
sha1 = "0.10.5"
sha2 = "0.10.7"
rand = "0.8.5"
